# playground

cpp/ranges/: CMakeLists.txt  README.md  main.cpp
haskell/basics/: Lists.hs  Main.hs  Makefile
java/build-tool/: README.md  build.xml  ivy.xml
java/mod-player/: .gitignore  build.xml  ivy.xml
java/servlet-example/: README.md  build.xml  ivy.xml
java/spring-boot/hello/: .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml
llvm/simple1/: CMakeLists.txt  test.cc
lua/examples/: metatable.lua
nim/jester/helloworld/: hello.nimble
objective-c/: README.md
objective-c/gui/: AppController.h  AppController.m  GNUmakefile  HelloWorldInfo.plist  main.m
objective-c/helloworld/: GNUmakefile  main.m  say.h  say.m
oneclickinstall/: main.py
python/minimanager/: .gitignore  README.md  app.py  event-watcher.py  minimanager.py
python/minimanager/static/: index.html
python/minimanager/static/js/: app.js  minion.js  minions.js
python/minimanager/templates/: index.html  layout.html  login.html  minion.html  minions.html
rust/boxes/: Cargo.toml
rust/boxes/src/: boxes.rs
rust/cmdline/: Cargo.toml  Makefile
rust/cmdline/src/: cmdline.rs
rust/piecechains/: Cargo.toml
rust/piecechains/src/: lib.rs
rust/tui.rs/: Cargo.toml
rust/tui.rs/src/: lib.rs
rust/tui.rs/src/examples/: example1.rs
rust/vmit.rs/: Cargo.toml
rust/vmit.rs/src/: cli.rs  lib.rs
rust/vmit.rs/src/virt/: connection.rs  domain.rs  ffi.rs  mod.rs  types.rs
rust/xml.rs/: Makefile  README.md
rust/xml.rs/src/xml/: lib.rs  sxml.rs
(+23 files in other folders)
