PROJECT(LLVM_TEST)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules )
PROJECT(LLVMTEST)
FIND_PACKAGE(LLVM)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${LLVM_COMPILE_FLAGS})
SET(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${LLVM_LDFLAGS})

INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIR})
ADD_EXECUTABLE(test test.cc)
TARGET_LINK_LIBRARIES(test ${LLVM_LIBS_CORE})

